--- a/cadastro.css
+++ b/cadastro.css
@@ -1,8 +1,9 @@
-
 body {
     font-family: 'Inter', sans-serif;
     color: #fff;
-    background-color: #6F6E6E;
+    background-color: #6C6A6A;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -10,14 +11,36 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    position: relative; /* adiciona posição relativa para posicionamento da div da imagem */
+    z-index: 1; /* adiciona um z-index para garantir que o container fique em cima do background */
 }
+
+.background-image {
+    background-image: url(../detec/imagens/PLANO\ DE\ FUNDO.png);
+    background-size: cover;
+    background-position: center;
+    position: absolute; /* adiciona posição absoluta para posicionar a div da imagem em relação ao body */
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1; /* adiciona um z-index negativo para garantir que a div fique atrás do container */
+}
+
+.logo {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    max-width: 100%;
+    height: auto;
+  }
 
 /* */
 
 #cadastro-form {
     width: 350px;
     padding: 20px;
-    border: 1px solid #333;
+    border: 1px solid #585757 ;
     border-radius: 28px;
     background-color: #5E5E5E;
 }
@@ -40,23 +63,30 @@ input[type="password"] {
     background-color: #D9D9D9;
     border: 1px solid #fff;
     border: none;
-    border-radius: 5px;
-    margin-bottom: 30px;
-    font-size: 20px;
-    margin-left: 55px;
+    margin-top: 35px;
     border-radius: 15px;
+    font-size: 15px;
+    margin-left: 54px;
+    font-style: normal;
+    font-family: 'inter';
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+   
+}
+#confirmarsenha{
+    margin-bottom: 0;
 }
 
 input[type="submit"] {
     width: 70%;
-    background-color: #8BDE38;
     color: #fff;
-    padding: 10px;
     border: none;
     border-radius: 15px;
+    padding: 10px;
     font-size: 20px;
-    cursor: pointer;
+    margin-top: 30px;
     margin-left: 55px;
+    cursor: pointer;
+    background-color: #8BDE38;
     margin-bottom: 20px;
     
 }
@@ -66,7 +96,10 @@ input[type="submit"]:hover {
 }
 
 .error {
-    color: red;
-    font-size: 14px;
-    margin-top: 5px;
+    color: #FC0000;
+    font-size: 15px;
+    font-family: 'Inter';
+    font-style: normal;
+    margin-top: 2px;
+    margin-left: 62px;
 }
