--- a/cadastro.css
+++ b/cadastro.css
@@ -68,7 +68,7 @@ input[type="password"] {
     font-size: 15px;
     margin-left: 54px;
     font-style: normal;
-    font-family: 'inter';
+    font-weight: 'inter';
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
    
 }
