--- a/login.css
+++ b/login.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'Inter Regular';
+    font-family: 'Inter';
     src: url('../detec/fontes/Inter-Regular.ttf') format('truetype');
   }
   
   body {
-    font-family: 'Inter Regular', sans-serif;
+    font-family: 'Inter', sans-serif;
     color: #fff;
     background-color: #6C6A6A;
     margin: 0;
@@ -16,20 +16,20 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    position: relative; /* adiciona posição relativa para posicionamento da div da imagem */
-    z-index: 1; /* adiciona um z-index para garantir que o container fique em cima do background */
+    position: relative;
+    z-index: 1;
   }
   
   .background-image {
     background-image: url(../detec/imagens/PLANO\ DE\ FUNDO.png);
     background-size: cover;
     background-position: center;
-    position: absolute; /* adiciona posição absoluta para posicionar a div da imagem em relação ao body */
+    position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: -1; /* adiciona um z-index negativo para garantir que a div fique atrás do container */
+    z-index: -1;
   }
   
   .logo {
@@ -40,29 +40,26 @@
     height: auto;
   }
   
-  /* */
-  
-  #cadastro-form {
-    width: 350px;
-    padding: 20px;
+  #login-form {
+    width: 320px;
+    padding: 25px;
     border: 1px solid #585757 ;
     border-radius: 28px;
     background-color: #5E5E5E;
   }
   
-  #titulo {
+  #titulo{
     color: #fff;
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
     text-align: center;
-    margin-right: 7px;
+    margin-right: 1px;
     margin-top: 40px;
     margin-bottom: 8px;
   }
   
-  input[type="text"],
   input[type="email"],
   input[type="password"] {
     width: 72%;
@@ -78,18 +75,14 @@
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   
-  #confirmarsenha {
-    margin-bottom: 10px;
-  }
-  
   input[type="submit"] {
-    width: 80%;
+    width: 81%;
     color: #fff;
     border: none;
     border-radius: 15px;
     padding: 12px;
     font-size: 15px;
-    margin-top: 30px;
+    margin-top: 40px;
     margin-left: 35px;
     cursor: pointer;
     background-color: #8BDE38;
@@ -100,24 +93,24 @@
     background-color: #79c42e;
   }
   
- 
-  .error {
+  #vanc {
+    margin-top: 30px;
+    margin-left: 75px;
+    margin-bottom: 3px;
+    font-family: 'Inter', sans-serif;
+    font-size: 12px;
+    
+  }
+
+  #ancora {
+    color: #8BDE38;
+  }
+  
+  .error{
     color: #FC0000;
     font-size: 12px;
     font-family: 'Inter Regular';
     font-style: normal;
     margin-top: 2px;
     margin-left: 44px;
-   
-  }
-
-  #vanc {
-    margin-top: 0px;
-    margin-left: 95px;
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-  }
-
-  #ancora {
-    color: #8BDE38;
   }
