--- a/cadastro.css
+++ b/cadastro.css
@@ -1,123 +1,127 @@
 @font-face {
-    font-family: 'Inter Regular';
-    src: url('../detec/fontes/Inter-Regular.ttf') format('truetype');
-  }
+  font-family: 'Inter Regular';
+  src: url('../detec/fontes/Inter-Regular.ttf') format('truetype');
+}
 
-  body {
-    font-family: 'Inter Regular', sans-serif;
-    color: #fff;
-    background-color: #6C6A6A;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative; /* adiciona posição relativa para posicionamento da div da imagem */
-    z-index: 1; /* adiciona um z-index para garantir que o container fique em cima do background */
-  }
-  
-  .background-image {
-    background-image: url(../detec/imagens/PLANO\ DE\ FUNDO.png);
-    background-size: cover;
-    background-position: center;
-    position: absolute; /* adiciona posição absoluta para posicionar a div da imagem em relação ao body */
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: -1; /* adiciona um z-index negativo para garantir que a div fique atrás do container */
-  }
-  
-  .logo {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  /* */
-  
-  #cadastro-form {
-    width: 350px;
-    padding: 20px;
-    border: 1px solid #585757 ;
-    border-radius: 28px;
-    background-color: #5E5E5E;
-  }
-  
-  #titulo {
-    color: #fff;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    text-align: center;
-    margin-right: 7px;
-    margin-top: 40px;
-    margin-bottom: 8px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 72%;
-    padding: 15px;
-    background-color: #D9D9D9;
-    border: 1px solid #fff;
-    border: none;
-    margin-top: 28px;
-    border-radius: 15px;
-    font-size: 12px;
-    margin-left: 35px;
-    font-weight: 'inter';
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-  }
-  
-  #confirmarsenha {
-    margin-bottom: 10px;
-  }
-  
-  input[type="submit"] {
-    width: 80%;
-    color: #fff;
-    border: none;
-    border-radius: 15px;
-    padding: 12px;
-    font-size: 15px;
-    margin-top: 30px;
-    margin-left: 35px;
-    cursor: pointer;
-    background-color: #8BDE38;
-    margin-bottom: 20px;
-  }
-  
-  input[type="submit"]:hover {
-    background-color: #79c42e;
-  }
-  
- 
-  .error {
-    color: #FC0000;
-    font-size: 12px;
-    font-family: 'Inter Regular';
-    font-style: normal;
-    margin-top: 2px;
-    margin-left: 44px;
-   
-  }
+body {
+  font-family: 'Inter Regular', sans-serif;
+  color: #fff;
+  background-color: #6C6A6A;
+  margin: 0;
+  padding: 0;
+}
 
-  #vanc {
-    margin-top: 0px;
-    margin-left: 95px;
-    font-family: 'Inter', sans-serif;
-    font-size: 12px;
-  }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  /* adiciona posição relativa para posicionamento da div da imagem */
+  z-index: 1;
+  /* adiciona um z-index para garantir que o container fique em cima do background */
+}
 
-  #ancora {
-    color: #8BDE38;
-  }
+.background-image {
+  background-image: url(../detec/imagens/PLANO\ DE\ FUNDO.png);
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  /* adiciona posição absoluta para posicionar a div da imagem em relação ao body */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  /* adiciona um z-index negativo para garantir que a div fique atrás do container */
+}
+
+.logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  max-width: 100%;
+  height: auto;
+}
+
+/* */
+
+#cadastro-form {
+  width: 350px;
+  padding: 20px;
+  border: 1px solid #585757;
+  border-radius: 28px;
+  background-color: #5E5E5E;
+}
+
+#titulo {
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  text-align: center;
+  margin-right: 7px;
+  margin-top: 40px;
+  margin-bottom: 8px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 72%;
+  padding: 15px;
+  background-color: #D9D9D9;
+  border: 1px solid #fff;
+  border: none;
+  margin-top: 28px;
+  border-radius: 15px;
+  font-size: 12px;
+  margin-left: 35px;
+  font-weight: 'inter';
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+#confirmarsenha {
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  width: 80%;
+  color: #fff;
+  border: none;
+  border-radius: 15px;
+  padding: 12px;
+  font-size: 15px;
+  margin-top: 30px;
+  margin-left: 35px;
+  cursor: pointer;
+  background-color: #8BDE38;
+  margin-bottom: 20px;
+}
+
+input[type="submit"]:hover {
+  background-color: #79c42e;
+}
+
+
+.error {
+  color: #FC0000;
+  font-size: 12px;
+  font-family: 'Inter Regular';
+  font-style: normal;
+  margin-top: 2px;
+  margin-left: 44px;
+
+}
+
+#vanc {
+  margin-top: 0px;
+  margin-left: 95px;
+  font-family: 'Inter', sans-serif;
+  font-size: 12px;
+}
+
+#ancora {
+  color: #8BDE38;
+}
