--- a/Home.css
+++ b/Home.css
@@ -80,3 +80,14 @@
   padding: 40px;
   border-radius: 13px;
 }
+
+#addPublis{
+  background-color: #5e5e5e;
+  width: 43%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  border-radius: 13px;
+  margin-top: 20px;
+}
