--- a/Home.css
+++ b/Home.css
@@ -87,15 +87,22 @@ body {
   justify-content: center;
   padding: 40px;
   border-radius: 13px;
+  margin: 10px auto;
 }
 
 #addPublis{
   background-color: #5e5e5e;
   width: 43%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   padding: 40px;
   border-radius: 13px;
-  margin-top: 20px;
+  margin: 29px auto;
+}
+
+.introducao{
+  margin: 0 auto;
+  width: 30%;
+  text-align: center;
 }
