--- a/Home.css
+++ b/Home.css
@@ -1,9 +1,19 @@
-body {
-  font-family: 'Inter Regular', sans-serif;
-  color: #fff;
-  background-color: #6C6A6A;
-  margin: 0;
-  padding: 0;
+@font-face {
+  font-family: 'Inter Regular';
+  src: url('../detec/fontes/Inter-Regular.ttf') format('truetype');
+}
+
+.background-image {
+  background-color:#6C6A6A;
+  background-image: url(../detec/imagens/PLANO\ DE\ FUNDO.png);
+  background-size: cover; 
+  background-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
 }
 
 .container {
@@ -80,7 +90,7 @@ body {
 
 
 #addPubli {
-  background-color: #5e5e5e1c;
+  background-color: rgba(94, 94, 94, 0.38);
   width: 43%;
   display: flex;
   align-items: center;
