--- a/Home.css
+++ b/Home.css
@@ -138,9 +138,15 @@
   font-weight: 'inter';
 }
 
+.modal-content{
+  border-radius: 30px;
+  background-color: #6C6A6A;
+}
+
 .modal-header{
   background-color: #6C6A6A;
   color: white;
+  border-radius: 30px 30px 0px 0px;
 }
 
 .modal-header .modal-title{
@@ -153,6 +159,7 @@
 
 .modal-body{
   background-color: #6C6A6A;
+  border-radius: 0px 0px 30px 30px;
 }
 
 .modal-body .form-group #message-text{
