Cor do texto PET FORUM

--- a/Home.css
+++ b/Home.css
@@ -116,9 +116,10 @@
 }
 
 .introducao{
-  margin: 0 auto;
+  margin: 10px auto;
   width: 30%;
   text-align: center;
+  color: white;
 }
 
 .botaoDelete{
